SUBDIRS=Icons Language propertyeditor iisTaskPanel TaskView

lib_LTLIBRARIES=libFreeCADGui.la

BUILT_SOURCES=\
		moc_Action.cpp \
		moc_CallTips.cpp \
		moc_CombiView.cpp \
		moc_Control.cpp \
		moc_DemoMode.cpp \
		moc_DlgActionsImp.cpp \
		moc_DlgActivateWindowImp.cpp \
		moc_DlgCommandsImp.cpp \
		moc_DlgCustomizeImp.cpp \
		moc_DlgCustomizeSpaceball.cpp \
		moc_DlgDisplayPropertiesImp.cpp \
		moc_DlgEditorImp.cpp \
		moc_DlgGeneralImp.cpp \
		moc_DlgInputDialogImp.cpp \
		moc_DlgKeyboardImp.cpp \
		moc_DlgMacroExecuteImp.cpp \
		moc_DlgMacroRecordImp.cpp \
		moc_DlgMaterialPropertiesImp.cpp \
		moc_DlgEditFileIncludeProptertyExternal.cpp \
		moc_DlgOnlineHelpImp.cpp \
		moc_DlgParameterImp.cpp \
		moc_DlgPreferencesImp.cpp \
		moc_DlgProjectUtility.cpp \
		moc_DlgReportViewImp.cpp \
		moc_DlgRunExternal.cpp \
		moc_DlgSettings3DViewImp.cpp \
		moc_DlgSettingsViewColor.cpp \
		moc_DlgSettingsColorGradientImp.cpp \
		moc_DlgSettingsDocumentImp.cpp \
		moc_DlgSettingsImageImp.cpp \
		moc_DlgSettingsMacroImp.cpp \
		moc_DlgSettingsUnitsImp.cpp \
		moc_DlgTipOfTheDayImp.cpp \
		moc_DlgToolbarsImp.cpp \
		moc_TaskDlgRelocation.cpp \
		moc_DlgUndoRedo.cpp \
		moc_DockWindow.cpp \
		moc_DockWindowManager.cpp \
		moc_DownloadDialog.cpp \
		moc_FileDialog.cpp \
		moc_Flag.cpp \
		moc_GuiApplicationNativeEventAware.cpp \
		moc_HelpView.cpp \
		moc_InputVector.cpp \
		moc_MainWindow.cpp \
		moc_NetworkRetriever.cpp \
		moc_OnlineDocumentation.cpp \
		moc_Placement.cpp \
		moc_PrefWidgets.cpp \
		moc_ProgressBar.cpp \
		moc_ProgressDialog.cpp \
		moc_PropertyPage.cpp \
		moc_PropertyView.cpp \
		moc_PythonConsole.cpp \
		moc_PythonDebugger.cpp \
		moc_PythonEditor.cpp \
		moc_EditorView.cpp \
		moc_ReportView.cpp \
		moc_SceneInspector.cpp \
		moc_SelectionView.cpp \
		moc_SpinBox.cpp \
		moc_Splashscreen.cpp \
		moc_TaskPanelView.cpp \
		moc_TextEdit.cpp \
		moc_TextureMapping.cpp \
		moc_ToolBox.cpp \
		moc_Transform.cpp \
		moc_Tree.cpp \
		moc_TreeView.cpp \
		moc_MDIView.cpp\
		moc_View3DInventor.cpp \
		moc_WidgetFactory.cpp \
		moc_Widgets.cpp \
		ui_AboutApplication.h \
		ui_DemoMode.h \
		ui_DlgActions.h \
		ui_DlgActivateWindow.h \
		ui_DlgAuthorization.h \
		ui_DlgChooseIcon.h \
		ui_DlgCommands.h \
		ui_DlgDisplayProperties.h \
		ui_DlgEditor.h \
		ui_DlgInputDialog.h \
		ui_DlgKeyboard.h \
		ui_DlgGeneral.h \
		ui_DlgMacroExecute.h \
		ui_DlgMacroRecord.h \
		ui_DlgMaterialProperties.h \
		ui_DlgOnlineHelp.h \
		ui_DlgParameter.h \
		ui_DlgPreferences.h \
		ui_DlgProjectInformation.h \
		ui_DlgProjectUtility.h \
		ui_DlgReportView.h \
		ui_DlgRunExternal.h \
		ui_DlgSettings3DView.h \
		ui_DlgSettingsViewColor.h \
		ui_DlgSettingsColorGradient.h \
		ui_DlgSettingsDocument.h \
		ui_DlgSettingsImage.h \
		ui_DlgSettingsMacro.h \
		ui_DlgSettingsUnits.h \
		ui_DlgTipOfTheDay.h \
		ui_DlgToolbars.h \
		ui_DlgTreeWidget.h \
		ui_DlgLocationAngle.h \
		ui_DlgLocationPos.h \
		ui_SceneInspector.h \
		ui_MouseButtons.h \
		ui_InputVector.h \
		ui_Placement.h \
		ui_TextureMapping.h \
		DocumentPy.cpp \
		PythonWorkbenchPy.cpp \
		SelectionObjectPy.cpp \
		WorkbenchPy.cpp \
		ViewProviderPy.cpp \
		ViewProviderDocumentObjectPy.cpp \
		ViewProviderPythonFeaturePy.cpp \
		GuiInitScript.h

libFreeCADGui_la_UI=\
		AboutApplication.ui \
		DemoMode.ui \
		DlgActions.ui \
		DlgActivateWindow.ui \
		DlgAuthorization.ui \
		DlgChooseIcon.ui \
		DlgCommands.ui \
		DlgDisplayProperties.ui \
		DlgEditor.ui \
		DlgGeneral.ui \
		DlgInputDialog.ui \
		DlgKeyboard.ui \
		DlgMacroExecute.ui \
		DlgMacroRecord.ui \
		DlgMaterialProperties.ui \
		DlgOnlineHelp.ui \
		DlgParameter.ui \
		DlgPreferences.ui \
		DlgProjectInformation.ui \
		DlgProjectUtility.ui \
		DlgReportView.ui \
		DlgRunExternal.ui \
		DlgSettings3DView.ui \
		DlgSettingsViewColor.ui \
		DlgSettingsDocument.ui \
		DlgSettingsImage.ui \
		DlgSettingsMacro.ui \
		DlgSettingsUnits.ui \
		DlgSettingsColorGradient.ui \
		DlgTipOfTheDay.ui \
		DlgToolbars.ui \
		DlgLocationAngle.ui \
		DlgLocationPos.ui \
		DlgTreeWidget.ui \
		MouseButtons.ui \
		SceneInspector.ui \
		InputVector.ui \
		Placement.ui \
		TextureMapping.ui

libFreeCADGui_la_BUILT=\
		DocumentPy.h \
		PythonWorkbenchPy.h \
		SelectionObjectPy.h \
		ViewProviderPy.h \
		ViewProviderDocumentObjectPy.h \
		ViewProviderPythonFeaturePy.h \
		WorkbenchPy.h 

libFreeCADGui_la_SOURCES=\
		Inventor/SoDrawingGrid.cpp \
		Action.cpp \
		Application.cpp \
		ApplicationPy.cpp \
		Assistant.cpp \
		Assistant.h \
		BitmapFactory.cpp \
		BlenderNavigationStyle.cpp \
		CADNavigationStyle.cpp \
		CallTips.cpp \
		CombiView.cpp \
		Control.cpp \
		Command.cpp \
		CommandDoc.cpp \
		CommandFeat.cpp \
		CommandMacro.cpp \
		CommandStd.cpp \
		CommandWindow.cpp \
		CommandTest.cpp \
		CommandView.cpp \
		DemoMode.cpp \
		DemoMode.h \
		DlgActionsImp.cpp \
		DlgActionsImp.h \
		DlgActivateWindowImp.cpp \
		DlgActivateWindowImp.h \
		DlgCommandsImp.cpp \
		DlgCommandsImp.h \
		DlgCustomizeImp.cpp \
		DlgCustomizeImp.h \
		DlgCustomizeSpaceball.cpp \
		DlgCustomizeSpaceball.h \
		DlgDisplayPropertiesImp.cpp \
		DlgDisplayPropertiesImp.h \
		DlgEditorImp.cpp \
		DlgEditorImp.h \
		DlgGeneralImp.cpp \
		DlgGeneralImp.h \
		DlgInputDialogImp.cpp \
		DlgInputDialogImp.h \
		DlgKeyboardImp.cpp \
		DlgKeyboardImp.h \
		DlgMacroExecuteImp.cpp \
		DlgMacroExecuteImp.h \
		DlgMacroRecordImp.cpp \
		DlgMacroRecordImp.h \
		DlgMaterialPropertiesImp.cpp \
		DlgMaterialPropertiesImp.h \
		DlgOnlineHelpImp.cpp \
		DlgOnlineHelpImp.h \
		DlgParameterImp.cpp \
		DlgParameterImp.h \
		DlgPreferencesImp.cpp \
		DlgPreferencesImp.h \
		DlgProjectInformationImp.cpp \
		DlgProjectInformationImp.h \
		DlgProjectUtility.cpp \
		DlgProjectUtility.h \
		DlgReportViewImp.cpp \
		DlgReportViewImp.h \
		DlgRunExternal.cpp \
		DlgRunExternal.h \
		DlgEditFileIncludeProptertyExternal.cpp \
		DlgEditFileIncludeProptertyExternal.h \
		DlgSettings3DViewImp.cpp \
		DlgSettings3DViewImp.h \
		DlgSettingsViewColor.cpp \
		DlgSettingsViewColor.h \
		DlgSettingsColorGradientImp.cpp \
		DlgSettingsColorGradientImp.h \
		DlgSettingsDocumentImp.cpp \
		DlgSettingsDocumentImp.h \
		DlgSettingsImageImp.cpp \
		DlgSettingsImageImp.h \
		DlgSettingsMacroImp.cpp \
		DlgSettingsMacroImp.h \
		DlgSettingsUnitsImp.cpp \
		DlgSettingsUnitsImp.h \
		DlgTipOfTheDayImp.cpp \
		DlgTipOfTheDayImp.h \
		DlgToolbarsImp.cpp \
		DlgToolbarsImp.h \
		DownloadDialog.cpp \
		DownloadDialog.h \
		TaskDlgRelocation.cpp \
		TaskDlgRelocation.h \
		DlgUndoRedo.cpp \
		DlgUndoRedo.h \
		DockWindow.cpp \
		DockWindowManager.cpp \
		Document.cpp \
		DocumentPyImp.cpp \
		DocumentModel.cpp \
		FileDialog.cpp \
		Flag.cpp \
		GuiApplicationNativeEventAware.cpp \
		GuiApplicationNativeEventAware.h \
		GuiConsole.cpp \
		GuiConsole.h \
		HelpView.cpp \
		InputVector.cpp \
		InputVector.h \
		InventorNavigationStyle.cpp \
		Placement.cpp \
		Placement.h \
		Macro.cpp \
		MainWindow.cpp \
		MDIView.cpp \
		MenuManager.cpp \
		MergeDocuments.cpp \
		MouseSelection.cpp \
		NavigationStyle.cpp \
		NetworkRetriever.cpp \
		OnlineDocumentation.cpp \
		OnlineDocumentation.h \
		PreCompiled.cpp \
		PreCompiled.h \
		PrefWidgets.cpp \
		ProgressBar.cpp \
		ProgressDialog.cpp \
		PropertyPage.cpp \
		PropertyView.cpp \
		PythonConsole.cpp \
		PythonConsolePy.cpp \
		PythonConsolePy.h \
		PythonDebugger.cpp \
		PythonDebugger.h \
		PythonEditor.cpp \
		EditorView.cpp \
		PythonWorkbenchPyImp.cpp \
		ReportView.cpp \
		resource.cpp \
		SceneInspector.cpp \
		SceneInspector.h \
		Selection.cpp \
		SelectionObject.cpp \
		SelectionFilter.cpp \
		SelectionObjectPyImp.cpp \
		SelectionView.cpp \
		SoAxisCrossKit.cpp \
		SoFCBackgroundGradient.cpp \
		SoFCBoundingBox.cpp \
		SoFCColorBar.cpp \
		SoFCColorGradient.cpp \
		SoFCColorLegend.cpp \
		SoFCDB.cpp \
		SoFCDB.h \
		SoFCInteractiveElement.cpp \
		SoNavigationDragger.cpp \
		SoFCOffscreenRenderer.cpp \
		SoFCSelection.cpp \
		SoFCUnifiedSelection.cpp \
		SoFCSelectionAction.cpp \
		SoFCVectorizeSVGAction.cpp \
		SoFCVectorizeU3DAction.cpp \
		SoNavigationDraggerLayout.h \
		SoTextLabel.cpp \
		SpaceballEvent.cpp \
		SpaceballEvent.h \
		SpinBox.cpp \
		Splashscreen.cpp \
		SplitView3DInventor.cpp \
		SyntaxHighlighter.cpp \
		TaskPanelView.cpp \
		TextEdit.cpp \
		TextureMapping.cpp \
		TextureMapping.h \
		Thumbnail.cpp \
		ToolBarManager.cpp \
		ToolBox.cpp \
		ToolBoxManager.cpp \
		Transform.cpp \
		Transform.h \
		Tree.cpp \
		TreeView.cpp \
		Utilities.cpp \
		View.cpp \
		View3DInventor.cpp \
		View3DInventorExamples.cpp \
		View3DInventorExamples.h \
		View3DInventorViewer.cpp \
		View3DPy.cpp \
		ViewProvider.cpp \
		ViewProviderBuilder.cpp \
		ViewProviderAnnotation.cpp \
		ViewProviderDocumentObject.cpp \
		ViewProviderDocumentObjectGroup.cpp \
		ViewProviderExtern.cpp \
		ViewProviderFeature.cpp \
		ViewProviderGeometryObject.cpp \
		ViewProviderInventorObject.cpp \
		ViewProviderVRMLObject.cpp \
		ViewProviderPyImp.cpp \
		ViewProviderDocumentObjectPyImp.cpp \
		ViewProviderMeasureDistance.cpp \
		ViewProviderPythonFeature.cpp \
		ViewProviderPythonFeaturePyImp.cpp \
		WaitCursor.cpp \
		WhatsThis.cpp \
		WidgetFactory.cpp \
		Widgets.cpp \
		Window.cpp \
		Workbench.cpp \
		WorkbenchFactory.cpp \
		WorkbenchManager.cpp \
		WorkbenchPyImp.cpp 

includedir = @includedir@/Gui
nodist_include_HEADERS=\
		$(libFreeCADGui_la_BUILT)

include_HEADERS=\
		Inventor/SoDrawingGrid.h \
		Qt4All.h \
		InventorAll.h \
		Action.h \
		Application.h \
		BitmapFactory.h \
		CallTips.h \
		CombiView.h \
		Control.h \
		Command.h \
		DockWindow.h \
		DockWindowManager.h \
		Document.h \
		DocumentModel.h \
		FileDialog.h \
		Flag.h \
		HelpView.h \
		Macro.h \
		MainWindow.h \
		MDIView.h \
		MenuManager.h \
		MergeDocuments.h \
		MouseSelection.h \
		NavigationStyle.h \
		NetworkRetriever.h \
		PrefWidgets.h \
		ProgressBar.h \
		ProgressDialog.h \
		PropertyPage.h \
		PropertyView.h \
		PythonConsole.h \
		PythonEditor.h \
		EditorView.h \
		ReportView.h \
		Selection.h \
		SelectionObject.h \
		SelectionFilter.h \
		SelectionView.h \
		SoAxisCrossKit.h \
		SoFCBackgroundGradient.h \
		SoFCBoundingBox.h \
		SoFCColorBar.h \
		SoFCColorGradient.h \
		SoFCColorLegend.h \
		SoFCInteractiveElement.h \
		SoNavigationDragger.h \
		SoFCOffscreenRenderer.h \
		SoFCSelection.h \
		SoFCUnifiedSelection.h \
		SoFCSelectionAction.h \
		SoFCVectorizeSVGAction.h \
		SoFCVectorizeU3DAction.h \
		SoTextLabel.h \
		SpinBox.h \
		Splashscreen.h \
		SplitView3DInventor.h \
		SyntaxHighlighter.h \
		TaskPanelView.h \
		TextEdit.h \
		Thumbnail.h \
		ToolBarManager.h \
		ToolBox.h \
		ToolBoxManager.h \
		Tree.h \
		TreeView.h \
		Utilities.h \
		View.h \
		View3DInventor.h \
		View3DInventorViewer.h \
		View3DPy.h \
		ViewProvider.h \
		ViewProviderBuilder.h \
		ViewProviderAnnotation.h \
		ViewProviderDocumentObject.h \
		ViewProviderDocumentObjectGroup.h \
		ViewProviderMeasureDistance.h \
		ViewProviderExtern.h \
		ViewProviderFeature.h \
		ViewProviderGeometryObject.h \
		ViewProviderInventorObject.h \
		ViewProviderVRMLObject.h \
		ViewProviderPythonFeature.h \
		WaitCursor.h \
		WhatsThis.h \
		WidgetFactory.h \
		Widgets.h \
		Window.h \
		Workbench.h \
		WorkbenchFactory.h \
		WorkbenchManager.h

EXTRA_DIST = \
		$(libFreeCADGui_la_UI) \
		SoNavigationDraggerLayout.iv \
		lex.SelectionFilter.c \
		SelectionFilter.l \
		SelectionFilter.y \
		SelectionFilter.tab.c \
		FreeCADGuiInit.py \
		DocumentPy.xml \
		PythonWorkbenchPy.xml \
		SelectionObjectPy.xml \
		WorkbenchPy.xml \
		ViewProviderPy.xml \
		ViewProviderDocumentObjectPy.xml \
		ViewProviderPythonFeaturePy.xml \
		CMakeLists.txt \
		core-gui.dox

distclean-compile:
  # avoid to remove SelectionFilter.tab.c

# the library search path.
libFreeCADGui_la_LDFLAGS = -L../Base -L../App $(QT_LIBS) $(sim_ac_coin_ldflags) $(sim_ac_coin_libs) \
		$(sim_ac_soqt_ldflags) $(sim_ac_soqt_libs) $(all_libraries) -version-info \
		@LIB_CURRENT@:@LIB_REVISION@:@LIB_AGE@

libFreeCADGui_la_LIBADD   =\
		Icons/libIcons.la \
		Language/libLanguage.la \
		propertyeditor/libpropertyeditor.la \
		iisTaskPanel/libTaskPanel.la \
		TaskView/libTaskView.la \
		@BOOST_FILESYSTEM_LIB@ @BOOST_SIGNALS_LIB@ \
		@BOOST_PROGOPTIONS_LIB@ @BOOST_SYSTEM_LIB@ \
		-l@PYTHON_LIB@ @ZIPIOS_LIB@ \
		-lQtUiTools \
		-lxerces-c \
		-lFreeCADBase \
		-lFreeCADApp

if HAVE_SPNAV_FOUND
libFreeCADGui_la_LIBADD += -lspnav
libFreeCADGui_la_CPPFLAGS = -DSPNAV_FOUND
endif

# rule for Qt MetaObject Compiler:
moc_%.cpp: %.h
	$(QT_MOC) $< -o $(@F)

# rule for Qt MetaObject Compiler:
%.moc: %.h
	$(QT_MOC) $< -o $(@F)

# rules for Qt User Interface Compiler:
ui_%.h: %.ui
	$(QT_UIC) $< -o $(@F)

# rules for Qt Resource Compiler:
qrc_%.cpp: %.qrc
	$(QT_RCC) -name $(*F) $< -o $(@F)

%Script.h: FreeCAD%.py
	$(PYTHON) $(top_srcdir)/src/Tools/PythonToCPP.py $< $@

%.cpp: %.xml $(top_srcdir)/src/Tools/generateTemplates/templateClassPyExport.py
	$(PYTHON) $(top_srcdir)/src/Tools/generate.py --outputPath $(@D) $<


# set the include path found by configure
AM_CXXFLAGS = -I$(top_srcdir)/src -I$(top_builddir)/src $(all_includes) $(QT_CXXFLAGS) \
	  -I$(sim_ac_coin_includedir) -I$(sim_ac_soqt_includedir)

CLEANFILES = $(BUILT_SOURCES) $(libFreeCADGui_la_BUILT)

