SUBDIRS=Icons Language propertyeditor iisTaskPanel TaskView

lib_LTLIBRARIES=libFreeCADGui.la

BUILT_SOURCES=\
		moc_Action.cpp \
		moc_CallTips.cpp \
		moc_Clipping.cpp \
		moc_CombiView.cpp \
		moc_Control.cpp \
		moc_DemoMode.cpp \
		moc_DlgActionsImp.cpp \
		moc_DlgActivateWindowImp.cpp \
		moc_DlgCommandsImp.cpp \
		moc_DlgCustomizeImp.cpp \
		moc_DlgCustomizeSpaceball.cpp \
		moc_DlgCustomizeSpNavSettings.cpp \
		moc_DlgDisplayPropertiesImp.cpp \
		moc_DlgEditFileIncludeProptertyExternal.cpp \
		moc_DlgEditorImp.cpp \
		moc_DlgGeneralImp.cpp \
		moc_DlgInputDialogImp.cpp \
		moc_DlgKeyboardImp.cpp \
		moc_DlgMacroExecuteImp.cpp \
		moc_DlgMacroRecordImp.cpp \
		moc_DlgMaterialPropertiesImp.cpp \
		moc_DlgOnlineHelpImp.cpp \
		moc_DlgParameterImp.cpp \
		moc_DlgPreferencesImp.cpp \
		moc_DlgProjectInformationImp.cpp \
		moc_DlgProjectUtility.cpp \
		moc_DlgPropertyLink.cpp \
		moc_DlgReportViewImp.cpp \
		moc_DlgRunExternal.cpp \
		moc_DlgSettings3DViewImp.cpp \
		moc_DlgSettingsColorGradientImp.cpp \
		moc_DlgSettingsDocumentImp.cpp \
		moc_DlgSettingsImageImp.cpp \
		moc_DlgSettingsMacroImp.cpp \
		moc_DlgSettingsUnitsImp.cpp \
		moc_DlgSettingsViewColor.cpp \
		moc_DlgTipOfTheDayImp.cpp \
		moc_DlgToolbarsImp.cpp \
		moc_DlgUndoRedo.cpp \
		moc_DlgUnitsCalculatorImp.cpp \
		moc_DockWindow.cpp \
		moc_DockWindowManager.cpp \
		moc_DownloadDialog.cpp \
		moc_DownloadItem.cpp \
		moc_DownloadManager.cpp \
		moc_EditorView.cpp \
		moc_FileDialog.cpp \
		moc_Flag.cpp \
		moc_GraphvizView.cpp \
		moc_GuiApplicationNativeEventAware.cpp \
		moc_HelpView.cpp \
		moc_InputField.cpp \
		moc_InputVector.cpp \
		moc_MainWindow.cpp \
		moc_ManualAlignment.cpp \
		moc_MDIView.cpp \
		moc_NetworkRetriever.cpp \
		moc_OnlineDocumentation.cpp \
		moc_Placement.cpp \
		moc_PrefWidgets.cpp \
		moc_ProgressBar.cpp \
		moc_ProgressDialog.cpp \
		moc_ProjectView.cpp \
		moc_PropertyPage.cpp \
		moc_PropertyView.cpp \
		moc_PythonConsole.cpp \
		moc_PythonDebugger.cpp \
		moc_PythonEditor.cpp \
		moc_ReportView.cpp \
		moc_SceneInspector.cpp \
		moc_SelectionView.cpp \
		moc_SpinBox.cpp \
		moc_Splashscreen.cpp \
		moc_TaskDlgRelocation.cpp \
		moc_TaskPanelView.cpp \
		moc_TextEdit.cpp \
		moc_TextureMapping.cpp \
		moc_ToolBox.cpp \
		moc_Transform.cpp \
		moc_Tree.cpp \
		moc_TreeView.cpp \
		moc_WidgetFactory.cpp \
		moc_Widgets.cpp \
		moc_View3DInventor.cpp \
		ui_AboutApplication.h \
		ui_Clipping.h \
		ui_DemoMode.h \
		ui_DlgActions.h \
		ui_DlgActivateWindow.h \
		ui_DlgAuthorization.h \
		ui_DlgChooseIcon.h \
		ui_DlgCommands.h \
		ui_DlgCustomizeSpNavSettings.h \
		ui_DlgDisplayProperties.h \
		ui_DlgEditor.h \
		ui_DlgGeneral.h \
		ui_DlgInputDialog.h \
		ui_DlgKeyboard.h \
		ui_DlgLocationAngle.h \
		ui_DlgLocationPos.h \
		ui_DlgMacroExecute.h \
		ui_DlgMacroRecord.h \
		ui_DlgMaterialProperties.h \
		ui_DlgOnlineHelp.h \
		ui_DlgParameter.h \
		ui_DlgPreferences.h \
		ui_DlgProjectInformation.h \
		ui_DlgProjectUtility.h \
		ui_DlgPropertyLink.h \
		ui_DlgReportView.h \
		ui_DlgRunExternal.h \
		ui_DlgSettings3DView.h \
		ui_DlgSettingsColorGradient.h \
		ui_DlgSettingsDocument.h \
		ui_DlgSettingsImage.h \
		ui_DlgSettingsMacro.h \
		ui_DlgSettingsUnits.h \
		ui_DlgSettingsViewColor.h \
		ui_DlgTipOfTheDay.h \
		ui_DlgToolbars.h \
		ui_DlgTreeWidget.h \
		ui_DlgUnitsCalculator.h \
		ui_DownloadItem.h \
		ui_DownloadManager.h \
		ui_InputVector.h \
		ui_MouseButtons.h \
		ui_Placement.h \
		ui_SceneInspector.h \
		ui_TextureMapping.h \
		DocumentPy.cpp \
		PythonWorkbenchPy.cpp \
		SelectionObjectPy.cpp \
		WorkbenchPy.cpp \
		ViewProviderPy.cpp \
		ViewProviderDocumentObjectPy.cpp \
		ViewProviderPythonFeaturePy.cpp \
		GuiInitScript.h

libFreeCADGui_la_UI=\
		AboutApplication.ui \
		Clipping.ui \
		DemoMode.ui \
		DlgActions.ui \
		DlgActivateWindow.ui \
		DlgAuthorization.ui \
		DlgChooseIcon.ui \
		DlgCommands.ui \
		DlgCustomizeSpNavSettings.ui \
		DlgDisplayProperties.ui \
		DlgEditor.ui \
		DlgGeneral.ui \
		DlgInputDialog.ui \
		DlgKeyboard.ui \
		DlgLocationAngle.ui \
		DlgLocationPos.ui \
		DlgMacroExecute.ui \
		DlgMacroRecord.ui \
		DlgMaterialProperties.ui \
		DlgOnlineHelp.ui \
		DlgParameter.ui \
		DlgPreferences.ui \
		DlgProjectInformation.ui \
		DlgProjectUtility.ui \
		DlgPropertyLink.ui \
		DlgReportView.ui \
		DlgRunExternal.ui \
		DlgSettings3DView.ui \
		DlgSettingsColorGradient.ui \
		DlgSettingsDocument.ui \
		DlgSettingsImage.ui \
		DlgSettingsMacro.ui \
		DlgSettingsUnits.ui \
		DlgSettingsViewColor.ui \
		DlgTipOfTheDay.ui \
		DlgToolbars.ui \
		DlgTreeWidget.ui \
		DlgUnitsCalculator.ui \
		DownloadItem.ui \
		DownloadManager.ui \
		InputVector.ui \
		MouseButtons.ui \
		Placement.ui \
		SceneInspector.ui \
		TextureMapping.ui

libFreeCADGui_la_BUILT=\
		DocumentPy.h \
		PythonWorkbenchPy.h \
		SelectionObjectPy.h \
		ViewProviderPy.h \
		ViewProviderDocumentObjectPy.h \
		ViewProviderPythonFeaturePy.h \
		WorkbenchPy.h 

libFreeCADGui_la_SOURCES=\
		Inventor/SoAutoZoomTranslation.cpp \
		Inventor/SoAutoZoomTranslation.h \
		Inventor/SoDrawingGrid.cpp \
		Inventor/SoDrawingGrid.h \
		Action.cpp \
		Action.h \
		Application.cpp \
		Application.h \
		ApplicationPy.cpp \
		Assistant.cpp \
		Assistant.h \
		BitmapFactory.cpp \
		BitmapFactory.h \
		BlenderNavigationStyle.cpp \
		CADNavigationStyle.cpp \
		CallTips.cpp \
		CallTips.h \
		Clipping.cpp \
		Clipping.h \
		CombiView.cpp \
		CombiView.h \
		Command.cpp \
		CommandDoc.cpp \
		CommandFeat.cpp \
		Command.h \
		CommandMacro.cpp \
		CommandStd.cpp \
		CommandTest.cpp \
		CommandView.cpp \
		CommandWindow.cpp \
		Control.cpp \
		Control.h \
		DemoMode.cpp \
		DemoMode.h \
		DlgActionsImp.cpp \
		DlgActionsImp.h \
		DlgActivateWindowImp.cpp \
		DlgActivateWindowImp.h \
		DlgCommandsImp.cpp \
		DlgCommandsImp.h \
		DlgCustomizeImp.cpp \
		DlgCustomizeImp.h \
		DlgCustomizeSpaceball.cpp \
		DlgCustomizeSpaceball.h \
		DlgCustomizeSpNavSettings.cpp \
		DlgCustomizeSpNavSettings.h \
		DlgDisplayPropertiesImp.cpp \
		DlgDisplayPropertiesImp.h \
		DlgEditFileIncludeProptertyExternal.cpp \
		DlgEditFileIncludeProptertyExternal.h \
		DlgEditorImp.cpp \
		DlgEditorImp.h \
		DlgGeneralImp.cpp \
		DlgGeneralImp.h \
		DlgInputDialogImp.cpp \
		DlgInputDialogImp.h \
		DlgKeyboardImp.cpp \
		DlgKeyboardImp.h \
		DlgMacroExecuteImp.cpp \
		DlgMacroExecuteImp.h \
		DlgMacroRecordImp.cpp \
		DlgMacroRecordImp.h \
		DlgMaterialPropertiesImp.cpp \
		DlgMaterialPropertiesImp.h \
		DlgOnlineHelpImp.cpp \
		DlgOnlineHelpImp.h \
		DlgParameterImp.cpp \
		DlgParameterImp.h \
		DlgPreferencesImp.cpp \
		DlgPreferencesImp.h \
		DlgProjectInformationImp.cpp \
		DlgProjectInformationImp.h \
		DlgProjectUtility.cpp \
		DlgProjectUtility.h \
		DlgPropertyLink.cpp \
		DlgPropertyLink.h \
		DlgReportViewImp.cpp \
		DlgReportViewImp.h \
		DlgRunExternal.cpp \
		DlgRunExternal.h \
		DlgSettings3DViewImp.cpp \
		DlgSettings3DViewImp.h \
		DlgSettingsColorGradientImp.cpp \
		DlgSettingsColorGradientImp.h \
		DlgSettingsDocumentImp.cpp \
		DlgSettingsDocumentImp.h \
		DlgSettingsImageImp.cpp \
		DlgSettingsImageImp.h \
		DlgSettingsMacroImp.cpp \
		DlgSettingsMacroImp.h \
		DlgSettingsUnitsImp.cpp \
		DlgSettingsUnitsImp.h \
		DlgSettingsViewColor.cpp \
		DlgSettingsViewColor.h \
		DlgTipOfTheDayImp.cpp \
		DlgTipOfTheDayImp.h \
		DlgToolbarsImp.cpp \
		DlgToolbarsImp.h \
		DlgUndoRedo.cpp \
		DlgUndoRedo.h \
		DlgUnitsCalculatorImp.cpp \
		DlgUnitsCalculatorImp.h \
		DockWindow.cpp \
		DockWindow.h \
		DockWindowManager.cpp \
		DockWindowManager.h \
		Document.cpp \
		Document.h \
		DocumentModel.cpp \
		DocumentModel.h \
		DocumentPyImp.cpp \
		DownloadDialog.cpp \
		DownloadDialog.h \
		DownloadItem.cpp \
		DownloadItem.h \
		DownloadManager.cpp \
		DownloadManager.h \
		EditorView.cpp \
		EditorView.h \
		FileDialog.cpp \
		FileDialog.h \
		Flag.cpp \
		Flag.h \
		GLPainter.cpp \
		GLPainter.h \
		GraphvizView.cpp \
		GraphvizView.h \
		GuiApplicationNativeEventAware.cpp \
		GuiApplicationNativeEventAware.h \
		GuiConsole.cpp \
		GuiConsole.h \
		HelpView.cpp \
		HelpView.h \
		InputField.cpp \
		InputField.h \
		InputVector.cpp \
		InputVector.h \
		InventorAll.h \
		InventorNavigationStyle.cpp \
		Macro.cpp \
		Macro.h \
		MainWindow.cpp \
		MainWindow.h \
		ManualAlignment.cpp \
		ManualAlignment.h \
		MDIView.cpp \
		MDIView.h \
		MenuManager.cpp \
		MenuManager.h \
		MergeDocuments.cpp \
		MergeDocuments.h \
		MouseSelection.cpp \
		MouseSelection.h \
		NavigationStyle.cpp \
		NavigationStyle.h \
		NetworkRetriever.cpp \
		NetworkRetriever.h \
		OnlineDocumentation.cpp \
		OnlineDocumentation.h \
		Placement.cpp \
		Placement.h \
		PreCompiled.cpp \
		PreCompiled.h \
		PrefWidgets.cpp \
		PrefWidgets.h \
		ProgressBar.cpp \
		ProgressBar.h \
		ProgressDialog.cpp \
		ProgressDialog.h \
		ProjectView.cpp \
		ProjectView.h \
		PropertyPage.cpp \
		PropertyPage.h \
		PropertyView.cpp \
		PropertyView.h \
		PythonConsole.cpp \
		PythonConsole.h \
		PythonConsolePy.cpp \
		PythonConsolePy.h \
		PythonDebugger.cpp \
		PythonDebugger.h \
		PythonEditor.cpp \
		PythonEditor.h \
		PythonWorkbenchPyImp.cpp \
		Qt4All.h \
		ReportView.cpp \
		ReportView.h \
		resource.cpp \
		SceneInspector.cpp \
		SceneInspector.h \
		Selection.cpp \
		SelectionFilter.cpp \
		SelectionFilter.h \
		Selection.h \
		SelectionObject.cpp \
		SelectionObject.h \
		SelectionObjectPyImp.cpp \
		SelectionView.cpp \
		SelectionView.h \
		SoAxisCrossKit.cpp \
		SoAxisCrossKit.h \
		SoFCBackgroundGradient.cpp \
		SoFCBackgroundGradient.h \
		SoFCBoundingBox.cpp \
		SoFCBoundingBox.h \
		SoFCColorBar.cpp \
		SoFCColorBar.h \
		SoFCColorGradient.cpp \
		SoFCColorGradient.h \
		SoFCColorLegend.cpp \
		SoFCColorLegend.h \
		SoFCDB.cpp \
		SoFCDB.h \
		SoFCInteractiveElement.cpp \
		SoFCInteractiveElement.h \
		SoFCOffscreenRenderer.cpp \
		SoFCOffscreenRenderer.h \
		SoFCSelectionAction.cpp \
		SoFCSelectionAction.h \
		SoFCSelection.cpp \
		SoFCSelection.h \
		SoFCUnifiedSelection.cpp \
		SoFCUnifiedSelection.h \
		SoFCVectorizeSVGAction.cpp \
		SoFCVectorizeSVGAction.h \
		SoFCVectorizeU3DAction.cpp \
		SoFCVectorizeU3DAction.h \
		SoNavigationDragger.cpp \
		SoNavigationDragger.h \
		SoNavigationDraggerLayout.h \
		SoTextLabel.cpp \
		SoTextLabel.h \
		SpaceballEvent.cpp \
		SpaceballEvent.h \
		SpinBox.cpp \
		SpinBox.h \
		Splashscreen.cpp \
		Splashscreen.h \
		SplitView3DInventor.cpp \
		SplitView3DInventor.h \
		SyntaxHighlighter.cpp \
		SyntaxHighlighter.h \
		TaskDlgRelocation.cpp \
		TaskDlgRelocation.h \
		TaskPanelView.cpp \
		TaskPanelView.h \
		TextEdit.cpp \
		TextEdit.h \
		TextureMapping.cpp \
		TextureMapping.h \
		Thumbnail.cpp \
		Thumbnail.h \
		ToolBarManager.cpp \
		ToolBarManager.h \
		ToolBox.cpp \
		ToolBox.h \
		ToolBoxManager.cpp \
		ToolBoxManager.h \
		TouchpadNavigationStyle.cpp \
		Transform.cpp \
		Transform.h \
		Tree.cpp \
		Tree.h \
		TreeView.cpp \
		TreeView.h \
		Utilities.cpp \
		Utilities.h \
		WaitCursor.cpp \
		WaitCursor.h \
		WhatsThis.cpp \
		WhatsThis.h \
		WidgetFactory.cpp \
		WidgetFactory.h \
		Widgets.cpp \
		Widgets.h \
		View3DInventor.cpp \
		View3DInventorExamples.cpp \
		View3DInventorExamples.h \
		View3DInventor.h \
		View3DInventorViewer.cpp \
		View3DInventorViewer.h \
		View3DPy.cpp \
		View3DPy.h \
		View.cpp \
		View.h \
		ViewProviderAnnotation.cpp \
		ViewProviderAnnotation.h \
		ViewProviderBuilder.cpp \
		ViewProviderBuilder.h \
		ViewProvider.cpp \
		ViewProviderDocumentObject.cpp \
		ViewProviderDocumentObjectGroup.cpp \
		ViewProviderDocumentObjectGroup.h \
		ViewProviderDocumentObject.h \
		ViewProviderDocumentObjectPyImp.cpp \
		ViewProviderExtern.cpp \
		ViewProviderExtern.h \
		ViewProviderFeature.cpp \
		ViewProviderFeature.h \
		ViewProviderGeometryObject.cpp \
		ViewProviderGeometryObject.h \
		ViewProvider.h \
		ViewProviderInventorObject.cpp \
		ViewProviderInventorObject.h \
		ViewProviderMaterialObject.cpp \
		ViewProviderMaterialObject.h \
		ViewProviderMeasureDistance.cpp \
		ViewProviderMeasureDistance.h \
		ViewProviderPlacement.cpp \
		ViewProviderPlacement.h \
		ViewProviderPlane.cpp \
		ViewProviderPlane.h \
		ViewProviderPyImp.cpp \
		ViewProviderPythonFeature.cpp \
		ViewProviderPythonFeature.h \
		ViewProviderPythonFeaturePyImp.cpp \
		ViewProviderVRMLObject.cpp \
		ViewProviderVRMLObject.h \
		Window.cpp \
		Window.h \
		Workbench.cpp \
		WorkbenchFactory.cpp \
		WorkbenchFactory.h \
		Workbench.h \
		WorkbenchManager.cpp \
		WorkbenchManager.h \
		WorkbenchPyImp.cpp

includedir = @includedir@/Gui
nodist_include_HEADERS=\
		$(libFreeCADGui_la_BUILT)

include_HEADERS=\
		Inventor/SoAutoZoomTranslation.h \
		Inventor/SoDrawingGrid.h \
		Qt4All.h \
		InventorAll.h \
		Action.h \
		Application.h \
		BitmapFactory.h \
		CallTips.h \
		CombiView.h \
		Control.h \
		Command.h \
		DockWindow.h \
		DockWindowManager.h \
		Document.h \
		DocumentModel.h \
		FileDialog.h \
		Flag.h \
		HelpView.h \
		Macro.h \
		MainWindow.h \
		MDIView.h \
		MenuManager.h \
		MergeDocuments.h \
		MouseSelection.h \
		NavigationStyle.h \
		NetworkRetriever.h \
		PrefWidgets.h \
		ProgressBar.h \
		ProgressDialog.h \
		PropertyPage.h \
		PropertyView.h \
		PythonConsole.h \
		PythonEditor.h \
		EditorView.h \
		ReportView.h \
		Selection.h \
		SelectionObject.h \
		SelectionFilter.h \
		SelectionView.h \
		SoAxisCrossKit.h \
		SoFCBackgroundGradient.h \
		SoFCBoundingBox.h \
		SoFCColorBar.h \
		SoFCColorGradient.h \
		SoFCColorLegend.h \
		SoFCInteractiveElement.h \
		SoNavigationDragger.h \
		SoFCOffscreenRenderer.h \
		SoFCSelection.h \
		SoFCUnifiedSelection.h \
		SoFCSelectionAction.h \
		SoFCVectorizeSVGAction.h \
		SoFCVectorizeU3DAction.h \
		SoTextLabel.h \
		SpinBox.h \
		Splashscreen.h \
		SplitView3DInventor.h \
		SyntaxHighlighter.h \
		TaskPanelView.h \
		TextEdit.h \
		Thumbnail.h \
		ToolBarManager.h \
		ToolBox.h \
		ToolBoxManager.h \
		Tree.h \
		TreeView.h \
		Utilities.h \
		View.h \
		View3DInventor.h \
		View3DInventorViewer.h \
		View3DPy.h \
		ViewProvider.h \
		ViewProviderBuilder.h \
		ViewProviderAnnotation.h \
		ViewProviderDocumentObject.h \
		ViewProviderDocumentObjectGroup.h \
		ViewProviderMeasureDistance.h \
		ViewProviderExtern.h \
		ViewProviderFeature.h \
		ViewProviderGeometryObject.h \
		ViewProviderInventorObject.h \
		ViewProviderVRMLObject.h \
		ViewProviderPythonFeature.h \
		WaitCursor.h \
		WhatsThis.h \
		WidgetFactory.h \
		Widgets.h \
		Window.h \
		Workbench.h \
		WorkbenchFactory.h \
		WorkbenchManager.h

EXTRA_DIST = \
		$(libFreeCADGui_la_UI) \
		3Dconnexion/GuiApplicationNativeEventAwareWin32.cpp \
		3Dconnexion/I3dMouseParams.h \
		3Dconnexion/MouseParameters.cpp \
		3Dconnexion/MouseParameters.h \
		SoNavigationDraggerLayout.iv \
		lex.SelectionFilter.c \
		SelectionFilter.l \
		SelectionFilter.y \
		SelectionFilter.tab.c \
		FreeCADGuiInit.py \
		DocumentPy.xml \
		PythonWorkbenchPy.xml \
		SelectionObjectPy.xml \
		WorkbenchPy.xml \
		ViewProviderPy.xml \
		ViewProviderDocumentObjectPy.xml \
		ViewProviderPythonFeaturePy.xml \
		CMakeLists.txt \
		core-gui.dox

distclean-compile:
  # avoid to remove SelectionFilter.tab.c

# the library search path.
libFreeCADGui_la_LDFLAGS = -L../Base -L../App $(QT_LIBS) $(sim_ac_coin_ldflags) $(sim_ac_coin_libs) \
		$(sim_ac_soqt_ldflags) $(sim_ac_soqt_libs) $(all_libraries) -version-info \
		@LIB_CURRENT@:@LIB_REVISION@:@LIB_AGE@

libFreeCADGui_la_LIBADD   =\
		Icons/libIcons.la \
		Language/libLanguage.la \
		propertyeditor/libpropertyeditor.la \
		iisTaskPanel/libTaskPanel.la \
		TaskView/libTaskView.la \
		@BOOST_FILESYSTEM_LIB@ @BOOST_SIGNALS_LIB@ \
		@BOOST_PROGOPTIONS_LIB@ @BOOST_SYSTEM_LIB@ \
		-l@PYTHON_LIB@ @ZIPIOS_LIB@ \
		-lQtUiTools \
		-lxerces-c \
		-lFreeCADBase \
		-lFreeCADApp

if HAVE_SPNAV_FOUND
libFreeCADGui_la_LIBADD += -lspnav
libFreeCADGui_la_CPPFLAGS = -DSPNAV_FOUND
endif

# rule for Qt MetaObject Compiler:
moc_%.cpp: %.h
	$(QT_MOC) $< -o $(@F)

# rule for Qt MetaObject Compiler:
%.moc: %.h
	$(QT_MOC) $< -o $(@F)

# rules for Qt User Interface Compiler:
ui_%.h: %.ui
	$(QT_UIC) $< -o $(@F)

# rules for Qt Resource Compiler:
qrc_%.cpp: %.qrc
	$(QT_RCC) -name $(*F) $< -o $(@F)

%Script.h: FreeCAD%.py
	$(PYTHON) $(top_srcdir)/src/Tools/PythonToCPP.py $< $@

%.cpp: %.xml $(top_srcdir)/src/Tools/generateTemplates/templateClassPyExport.py
	$(PYTHON) $(top_srcdir)/src/Tools/generate.py --outputPath $(@D) $<


# set the include path found by configure
AM_CXXFLAGS = -I$(top_srcdir)/src -I$(top_builddir)/src $(all_includes) $(QT_CXXFLAGS) \
	  -I$(sim_ac_coin_includedir) -I$(sim_ac_soqt_includedir)

CLEANFILES = $(BUILT_SOURCES) $(libFreeCADGui_la_BUILT)

